@@ -10,54 +10,56 @@ import org.testng.annotations.Parameters;
 
 import utils.ExtentManager;
 import com.aventstack.extentreports.Status;
+
 import java.net.URL;
 import java.time.Duration;
-import java.net.URI;
 
 public class BaseTest {
     protected WebDriver driver;
 
     @Parameters({"platformName"})
-	@BeforeClass
+    @BeforeClass
     public void setUp(String platformName) throws Exception {
-  // Use environment variable if inside Docker, otherwise fallback to localhost
+        // Hub URL: Docker network or fallback
         String hubUrl = System.getenv("HUB_URL");
-
         if (hubUrl == null || hubUrl.isEmpty()) {
-            // Default to Docker network hostname
             hubUrl = "http://selenium-hub:4444/";
         }
-        if(platformName.equalsIgnoreCase("chrome")) {
-        ChromeOptions options = new ChromeOptions();
-        options.addArguments("--headless=new");
-        options.addArguments("--disable-gpu");
-        options.addArguments("--no-sandbox");
-        options.addArguments("--disable-dev-shm-usage");
-        options.addArguments("--window-size=1920,1080");
-        options.addArguments("--remote-allow-origins=*");
-        options.setPageLoadTimeout(Duration.ofSeconds(120));
-        options.setScriptTimeout(Duration.ofSeconds(30));  // script execution timeout
-        driver = new RemoteWebDriver(new URI(hubUrl).toURL(), options);
+
+        if (platformName.equalsIgnoreCase("chrome")) {
+            ChromeOptions chromeOptions = new ChromeOptions();
+            chromeOptions.addArguments("--headless=new");
+            chromeOptions.addArguments("--disable-gpu");
+            chromeOptions.addArguments("--no-sandbox");
+            chromeOptions.addArguments("--disable-dev-shm-usage");
+            chromeOptions.addArguments("--window-size=1920,1080");
+            chromeOptions.addArguments("--remote-allow-origins=*");
+            chromeOptions.setPageLoadTimeout(Duration.ofSeconds(120));
+            chromeOptions.setScriptTimeout(Duration.ofSeconds(30));
+
+            driver = new RemoteWebDriver(new URL(hubUrl), chromeOptions);
+
+        } else if (platformName.equalsIgnoreCase("firefox")) {
+            FirefoxOptions firefoxOptions = new FirefoxOptions();
+            firefoxOptions.addArguments("--headless");
+            firefoxOptions.addArguments("--no-sandbox");
+            firefoxOptions.addArguments("--disable-dev-shm-usage");
+            firefoxOptions.addArguments("--start-maximized");
+            firefoxOptions.setPageLoadTimeout(Duration.ofSeconds(120));
+            firefoxOptions.setScriptTimeout(Duration.ofSeconds(30));
+
+            driver = new RemoteWebDriver(new URL(hubUrl), firefoxOptions);
+
+        } else {
+            throw new IllegalArgumentException("Unsupported platform: " + platformName);
         }
-//        else if(platformName.equalsIgnoreCase("firefox")) {
-//			FirefoxOptions options = new FirefoxOptions();
-//			options.addArguments("--no-sandbox");
-//			options.addArguments("--disable-dev-shm-usage");
-//			options.addArguments("--disable-gpu");
-//			options.addArguments("--start-maximized"); 
-			//options.addArguments("--headless=new"); // important for Docker
-//			options.addArguments("--remote-debugging-port=9222"); // helps DevToolsActivePort issue
-//			options.setPageLoadTimeout(Duration.ofSeconds(60)); // avoid long hangs on slow pages
-//			options.setScriptTimeout(Duration.ofSeconds(30));   // script execution timeout
-//			driver = new RemoteWebDriver(new URI(hubUrl).toURL(), options);
-//		}
-		else {
-			throw new IllegalArgumentException("Unsupported platform: " + platformName);
-		}
-        // Implicit wait (optional)
+
+        // Optional global waits
         driver.manage().timeouts().pageLoadTimeout(Duration.ofMinutes(5));
         driver.manage().timeouts().scriptTimeout(Duration.ofSeconds(60));
         driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(30));
+
+        // Extent Reports initialization
         ExtentManager.createTest(getClass().getSimpleName());
         ExtentManager.getTest().log(Status.INFO, "Driver initialized for " + getClass().getSimpleName());
     }
